--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Number Guessing Game</title>
 </head>
 <body>
-    <select name="county list" id="countryList"></select>
+    <h3>Welcome to Number Guessing Game!</h3><br>
+    <p>Enter the Number:<br>*Input a number between 0-10</p>
 
-    <table id="countryTable" border="1"></table>
+    <input type="text" id="input">
+
+    <button onclick="getNumber()">Enter</button>
 
     <script src="app.js"></script>
 </body>
